@@ -15787,6 +15787,7 @@ accuracy.
 @!ten_pow: array[0..9] of integer; {$10^0..10^9$}
 @!scaled_out: integer; {amount of |scaled| that was taken out in
 |divide_scaled|}
+@!resolution_ratio: integer; {(1in in sp)/|\maxdimen|}
 @!init_pdf_output: boolean;
 @!adv_char_width_s: integer; {to save result of calculation done in |adv_char_width| }
 @!adv_char_width_s_out: scaled;
@@ -15795,6 +15796,7 @@ accuracy.
 one_bp := 65782; {65781.76}
 one_hundred_bp := 6578176;
 one_hundred_inch := 473628672;
+resolution_ratio := 226;
 ten_pow[0] := 1;
 for i := 1 to 9 do
     ten_pow[i] := 10*ten_pow[i - 1];
@@ -34429,6 +34431,13 @@ begin
     end;
     if (x <= 0) or (y <= 0) or (xr < 0) or (yr < 0) then
         pdf_error("ext1", "invalid image dimensions");
+    if (x / resolution_ratio >= xr) or (y / resolution_ratio >= yr) then begin
+        {It's better to warn and ignore too-small resolutions given in
+         the image file, usually 1dpi x 1dpi, to avoid arithmetic overflow.}
+        xr := 0;
+        yr := 0;
+        pdf_warning("ext1", "too small image resolution ignored", true, true);
+    end;
     if is_pdf_image(image) then begin
         w := x;
         h := y;
